--- a/hello-basit-comet/Dockerfile
+++ b/hello-basit-comet/Dockerfile
@@ -8,11 +8,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app code
-COPY app.py .
+# Copy application source
+COPY src/ ./src/
 
 # Expose port 5000
 EXPOSE 5000
 
 # Run the app
-CMD ["python", "app.py"]
+CMD ["python", "src/app.py"]
