--- a/infrastructure/app-hello-basit-comet/helm/values.yaml
+++ b/infrastructure/app-hello-basit-comet/helm/values.yaml
@@ -1,15 +1,49 @@
-# replicaCount: 2
+replicaCount: 2
 
-# image:
-#   repository: nginx
-#   tag: stable
-#   pullPolicy: IfNotPresent
+image:
+  repository: <your-docker-image>
+  pullPolicy: IfNotPresent
+  tag: "latest"
 
-# service:
-#   type: LoadBalancer
-#   port: 80
+service:
+  type: LoadBalancer
+  port: 80
+  targetPort: 5000
 
-# containerPort: 80
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
 
-# app:
-#   name: hello-world
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 250m
+    memory: 256Mi
+
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 70
+
+env:
+  ENV_VAR: "prod"
+
+livenessProbe:
+  enabled: true
+  path: /healthz
+  port: 5000
+
+readinessProbe:
+  enabled: true
+  path: /healthz
+  port: 5000
