--- a/infrastructure/app-hello-basit-comet/helm/templates/deployment.yaml
+++ b/infrastructure/app-hello-basit-comet/helm/templates/deployment.yaml
@@ -1,32 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.app.name }}
+  name: {{ include "bazitadebiyicometproject.fullname" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Values.app.name }}
+      app: {{ include "bazitadebiyicometproject.name" . }}
   template:
     metadata:
       labels:
-        app: {{ .Values.app.name }}
+        app: {{ include "bazitadebiyicometproject.name" . }}
     spec:
       containers:
-        - name: {{ .Values.app.name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - containerPort: {{ .Values.containerPort }}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Values.app.name }}-svc
-spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.containerPort }}
-  selector:
-    app: {{ .Values.app.name }}
+      - name: {{ include "bazitadebiyicometproject.name" . }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        ports:
+        - containerPort: {{ .Values.service.targetPort }}
+        env:
+        - name: ENV_VAR
+          value: {{ .Values.env.ENV_VAR | quote }}
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.livenessProbe.path }}
+            port: {{ .Values.livenessProbe.port }}
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.readinessProbe.path }}
+            port: {{ .Values.readinessProbe.port }}
+          initialDelaySeconds: 10
+          periodSeconds: 10
