--- a/infrastructure/app-hello-basit-comet/helm/values.yaml
+++ b/infrastructure/app-hello-basit-comet/helm/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 image:
-  repository: <your-docker-image>
+  repository: 690893780650.dkr.ecr.us-east-2.amazonaws.com/comet-ecr:b87efe1377a230e9f23475f6e38fdad8c14817a7
   pullPolicy: IfNotPresent
   tag: "latest"
 
